plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.15'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'gateway'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2025.0.0")

    implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation "org.springframework.boot:spring-boot-starter-data-redis-reactive"

    // Bucket4j
    implementation 'com.giffing.bucket4j.spring.boot.starter:bucket4j-spring-boot-starter:0.12.0'
    implementation 'com.bucket4j:bucket4j-redis:8.10.1'
    implementation 'com.github.ben-manes.caffeine:caffeine'

    implementation "org.springdoc:springdoc-openapi-starter-webflux-ui:2.5.0"
    implementation 'io.micrometer:context-propagation:1.1.2'

    // JSON Logging
    implementation 'net.logstash.logback:logstash-logback-encoder:8.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
